--- a/src/app/component/app-dashboard/app-dashboard.component.html
+++ b/src/app/component/app-dashboard/app-dashboard.component.html
@@ -13,13 +13,14 @@
         <div class="card card-w-title menu">
 
             <div class="ui-g-12">
-                <div class="ui-g-4 case">
-                    <div class="shadow-box ui-shadow-1">
-                        <a routerLink="/collaborateurs">
+                <div routerLink="/collaborateurs" class="ui-g-4 case">
+                    <div  class="shadow-box ui-shadow-1">
+                        <a >
                             <img class="image" src="./assets/layout/images/icones/collaborateurs.png" title=""
                                  data-themekey="#">
                         </a>
                     </div>
+                    <div class="description"><a>coucou c'est Farid qui developpe</a></div>
                 </div>
                 <div class="ui-g-4 case">
                     <div class="shadow-box ui-shadow-1">
@@ -85,7 +86,7 @@
                 <div class="ui-g-4 case">
                     <div class="shadow-box ui-shadow-1">
                         <a routerLink="collaborateurs">
-                            <img class="image" src="" title="" data-themekey="#">
+                            <img class="image" src="./assets/layout/images/icones/referenciel.png" title="" data-themekey="#">
                         </a>
                     </div>
                 </div>
