--- a/src/core/components/core-profile/core-profile.component.html
+++ b/src/core/components/core-profile/core-profile.component.html
@@ -1,11 +1,10 @@
 
 <div class="profile" [ngClass]="{'profile-expanded':active}" >
     <a href="#" (click)="onClick($event)">
-        <div class="idPhotoFrame">
-            <img id="idPhoto" style="margin-left: 20px"  class="profile-image" style="margin-left:0; display:none" src="{idPhotoPath}"/>
-            <span style="lineheight:45px; font-size:1.8em; color:white">{{firstLetter}}</span>
+        <div class="idPhotoFrame" >
+            <span style="line-height:45px; font-size:1.8em; color:white;" >{{firstLetter}}</span>
         </div>
-        <a style="text-transform: capitalize;"  class="profile-name">{{currentUser.lastname}}
+        <a style="text-transform: capitalize;margin-top: 20px;vertical-align:middle"  class="profile-name">{{currentUser.lastname}}
             {{currentUser.firstname}} </a>
         <i class="fa fa-fw fa-caret-down"></i>
         <div class="ui-dialog-buttonpane ui-helper-clearfix"></div>
