slide show with fake datas

--- a/src/app/component/app-dashboard/app-dashboard.component.html
+++ b/src/app/component/app-dashboard/app-dashboard.component.html
@@ -3,7 +3,7 @@
         <div class="card card-w-title news">
             <div class="">
                 <div class="items">
-
+                    <app-news></app-news>
                 </div>
             </div>
         </div>
