--- a/src/app/component/app-dashboard/app-dashboard.component.css
+++ b/src/app/component/app-dashboard/app-dashboard.component.css
@@ -4,7 +4,6 @@
 .news-area{padding: 20px}
 
 .line1 {
-    max-height: 500px;
     max-width: 1400px;
     margin: auto;
 }
@@ -18,6 +17,7 @@
     background-color: #607D8B;
     min-height: 100%; /* 1:1 Aspect Ratio */
     max-height: 500px;
+    border-radius:0px;
 }
 
 .items {
@@ -31,8 +31,7 @@
 
 .panel-gray {
     background-color: #607D8B;
-    padding : 3px;
-    border-radius : 4px;
+    padding : 5px;
 }
 .text-white {
     text-color : white;
@@ -55,6 +54,15 @@
     bottom: 0;
     right: 0;
     text-align: center;
+}
+
+.card-legend {
+    color:white;
+    position:absolute;
+    bottom:3px;
+    text-align:center;
+    width:100%;
+    font-size:0.85em;
 }
 
 .ui-shadow-1 {
@@ -95,8 +103,49 @@
     transition-duration: 0.5s;
     transition-property: transform;
     transform: rotate(20deg) scale(2);;
-
 }
+
+/*
+.description{
+    display: none;
+    background : rgba(10,100,110, 0.5 );
+    z-index: 100;
+    position: relative;
+    font-size: 11px;
+}
+
+.case:hover .description {
+    color: #fff;
+
+    text-align: center;
+    display: block;
+    animation-duration: 1s;
+    animation-name: glissement;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes glissement {from { margin-top: -40%;  }    to {  margin-top: -90%; }}
+*/
+
+.case {
+    position:relative; width:100px; height:100px;
+    color:white; text-align:center;
+}
+
+.case .description {
+    height:0px; overflow:hidden; text-align:center; position : absolute; bottom : 0; left:0; width:100%; background-color:rgba(0,0,0,0.6); font-size:0.85em; line-height:2em;
+
+    -webkit-transition: height 0.35s; /* For Safari 3.1 to 6.0 */
+    -webkit-transition-timing-function: linear;
+    -webkit-transition-delay: 0.2s;
+    transition: height 0.35s;
+    transition-timing-function: linear;
+    transition-delay: 0.2s;
+}
+.case:hover .description{ height: 100%;}
+
+
 
 /* -------------------------------- */
 
