slide show with fake datas

--- a/src/app/component/app-dashboard/app-dashboard.component.html
+++ b/src/app/component/app-dashboard/app-dashboard.component.html
@@ -8,89 +8,128 @@
             </div>
         </div>
     </div>
-
     <div class="ui-g-6 ui-md-4">
         <div class="card card-w-title menu">
 
-            <div class="ui-g-12">
-                <div routerLink="/collaborateurs" class="ui-g-4 case">
-                    <div  class="shadow-box ui-shadow-1">
-                        <a >
-                            <img class="image" src="./assets/layout/images/icones/collaborateurs.png" title=""
-                                 data-themekey="#">
-                        </a>
-                    </div>
-                    <div class="description"><a>coucou c'est Farid qui developpe</a></div>
-                </div>
+            <div class="ui-g-12" style="padding-bottom: 0">
                 <div class="ui-g-4 case">
-                    <div class="shadow-box ui-shadow-1">
-                        <a routerLink="/prestations">
-                            <img class="image" src="./assets/layout/images/icones/conges.png" title=""
-                                 data-themekey="#">
-                        </a>
+                    <div style="position:relative">
+                        <div class="shadow-box ui-shadow-1">
+                            <a routerLink="/collaborateurs">
+                                <img class="image" src="./assets/layout/images/icones/collaborateurs.png" title=""
+                                     data-themekey="#">
+                            </a>
+                        </div>
+                        <div class="card-legend">Collaborateurs</div>
+                        <div class="description"><div style="padding-top: 5px">Collaborateurs</div></div>
                     </div>
                 </div>
                 <div class="ui-g-4 case">
-                    <div class="shadow-box ui-shadow-1">
-                        <a routerLink="/collaborateurs">
-                            <img class="image" src="./assets/layout/images/icones/annuaire.png" title=""
-                                 data-themekey="#">
-                        </a>
+                    <div style="position:relative">
+                        <div class="shadow-box ui-shadow-1">
+                            <a routerLink="/prestations">
+                                <img class="image" src="./assets/layout/images/icones/conges.png" title=""
+                                     data-themekey="#">
+                            </a>
+                        </div>
+                        <div class="card-legend">Congés</div>
+                        <div class="description"><div style="padding-top: 5px">Congés</div></div>
+                    </div>
+                </div>
+                <div class="ui-g-4 case">
+                    <div style="position:relative">
+                        <div class="shadow-box ui-shadow-1">
+                            <a routerLink="/collaborateurs">
+                                <img class="image" src="./assets/layout/images/icones/annuaire.png" title=""
+                                     data-themekey="#">
+                            </a>
+                        </div>
+                        <div class="card-legend">Annuaire</div>
+                        <div class="description"><div style="padding-top: 5px">Annuaire</div></div>
                     </div>
                 </div>
             </div>
 
 
-            <div class="ui-g-12">
+            <div class="ui-g-12" style="padding-bottom: 0">
                 <div class="ui-g-4 case">
-                    <div class="shadow-box ui-shadow-1">
-                        <a routerLink="/prestations">
-                            <img class="image" src="./assets/layout/images/icones/prestation.png" title=""
-                                 data-themekey="#">
-                        </a>
+                    <div style="position:relative">
+                        <div class="shadow-box ui-shadow-1">
+                            <a routerLink="/prestations">
+                                <img class="image" src="./assets/layout/images/icones/prestation.png" title=""
+                                     data-themekey="#">
+                            </a>
+                        </div>
+                        <div class="card-legend">Prestations</div>
+                        <div class="description"><div style="padding-top: 5px">Prestations</div></div>
                     </div>
                 </div>
                 <div class="ui-g-4 case">
-                    <div class="shadow-box ui-shadow-1">
-                        <a routerLink="/collaborateurs">
-                            <img class="image" src="" title="" data-themekey="#">
-                        </a>
+                    <div style="position:relative">
+                        <div class="shadow-box ui-shadow-1">
+                            <a routerLink="/collaborateurs">
+                                <img class="image" src="" title="" data-themekey="#">
+                            </a>
+                        </div>
+                        <div class="card-legend"></div>
+                        <div class="description"><div style="padding-top: 5px"></div></div>
                     </div>
                 </div>
                 <div class="ui-g-4 case">
-                    <div class="shadow-box ui-shadow-1">
-                        <a routerLink="/collaborateurs">
-                            <img class="image" src="" title="" data-themekey="#">
-                        </a>
+                    <div style="position:relative">
+                        <div class="shadow-box ui-shadow-1">
+                            <a routerLink="/collaborateurs">
+                                <img class="image" src="" title="" data-themekey="#">
+                            </a>
+                        </div>
+                        <div class="card-legend"></div>
+                        <div class="description"><div style="padding-top: 5px"></div></div>
                     </div>
                 </div>
             </div>
 
             <div class="ui-g-12">
                 <div class="ui-g-4 case">
-                    <div class="shadow-box ui-shadow-1">
-                        <a routerLink="collaborateurs">
-                            <img class="image" src="./assets/layout/images/icones/tableaudebord.png" title=""
-                                 data-themekey="#">
-                        </a>
+                    <div style="position:relative">
+                        <div class="shadow-box ui-shadow-1">
+                            <a routerLink="collaborateurs">
+                                <img class="image" src="./assets/layout/images/icones/tableaudebord.png" title=""
+                                     data-themekey="#">
+                            </a>
+                        </div>
+                        <div class="card-legend">Tableau de bord</div>
+                        <div class="description"><div style="padding-top: 5px">Tableau de bord</div></div>
                     </div>
                 </div>
                 <div class="ui-g-4 case">
-                    <div class="shadow-box ui-shadow-1">
-                        <a routerLink="collaborateurs">
-                            <img class="image" src="./assets/layout/images/icones/referenciel.png" title=""
-                                 data-themekey="#">
-                        </a>
+                    <div style="position:relative">
+                        <div class="shadow-box ui-shadow-1">
+                            <a routerLink="collaborateurs">
+                                <img class="image" src="./assets/layout/images/icones/referenciel.png" title=""
+                                     data-themekey="#">
+                            </a>
+                        </div>
+                        <div class="card-legend">Référentiel</div>
+                        <div class="description"><div style="padding-top: 5px">Référentiel</div></div>
                     </div>
                 </div>
                 <div class="ui-g-4 case">
-                    <div class="shadow-box ui-shadow-1">
-                        <a routerLink="collaborateurs">
-                            <img class="image" src="./assets/layout/images/icones/administration.png" title="" data-themekey="#">
-                        </a>
+                    <div style="position:relative">
+                        <div class="shadow-box ui-shadow-1">
+                            <a routerLink="collaborateurs">
+                                <img class="image" src="./assets/layout/images/icones/administration.png" title="" data-themekey="#">
+                            </a>
+                        </div>
+                        <div class="card-legend">Administrateur</div>
+                        <div class="description"><div style="padding-top: 5px">Administrateur</div></div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="ui-g-12 ui-md-12" style="padding:0px 20px">
+        <div class="panel-gray title" style="width:100%; text-align:center">
+            <span class=" white">Tableau de bord des Assistances Techniques de la SG au </span><p-calendar [(ngModel)]="at_date" [locale]="fr" dateFormat="dd/mm/yy" [showIcon]="true"></p-calendar>
         </div>
     </div>
 </div>
