--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -166,7 +166,7 @@
 
 
 
-                    <p-fileUpload #fubauto #fileImportInput mode="basic"   accept=".csv" customUpload="true" (uploadHandler)="fileChangeListener($event)"
+                    <p-fileUpload #fubauto #fileImportInput mode="basic"   accept=".csv" customUpload="true" (uploadHandler)="onUpload($event)"
                                   auto="true" chooseLabel="Importer les collaborateurs"></p-fileUpload>
 
 
