--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,5 +1,5 @@
-<div style="height: 100%">
+<div style="height: 50%">
 
-    <p-galleria [style]="{'position':'relative'}" panelWidth="100%"  [images]="images"  [showCaption]="true"></p-galleria>
+    <p-galleria [style]="{'position':'relative'}" panelWidth=""  frameHeight="40"  [images]="images"  [showCaption]="true"></p-galleria>
 
 </div>
