--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -1,7 +1,7 @@
 
 <p-toolbar>
     <div class="ui-toolbar-group-right">
-        <button pButton type="button" label="Nouveau collaborateur" icon="pi pi-plus" (click)="afficherLaSaisie()"></button>
+        <button pButton type="button" label="Nouveau collaborateur" icon="pi pi-plus" (click)="afficherLaSaisie($event)"></button>
 
     </div>
 </p-toolbar>
