--- a/src/app/component/app-dashboard/app-dashboard.component.html
+++ b/src/app/component/app-dashboard/app-dashboard.component.html
@@ -12,10 +12,10 @@
         <div class="card card-w-title menu">
 
             <div class="ui-g-12" style="padding-bottom: 0">
-                <div class="ui-g-4 case">
+                <div routerLink="/collaborateurs" class="ui-g-4 case">
                     <div style="position:relative">
                         <div class="shadow-box ui-shadow-1">
-                            <a routerLink="/collaborateurs">
+                            <a >
                                 <img class="image" src="./assets/layout/images/icones/collaborateurs.png" title=""
                                      data-themekey="#">
                             </a>
@@ -24,10 +24,10 @@
                         <div class="description"><div style="padding-top: 5px">Collaborateurs</div></div>
                     </div>
                 </div>
-                <div class="ui-g-4 case">
+                <div routerLink="/prestations" class="ui-g-4 case">
                     <div style="position:relative">
                         <div class="shadow-box ui-shadow-1">
-                            <a routerLink="/prestations">
+                            <a >
                                 <img class="image" src="./assets/layout/images/icones/conges.png" title=""
                                      data-themekey="#">
                             </a>
@@ -36,10 +36,10 @@
                         <div class="description"><div style="padding-top: 5px">Congés</div></div>
                     </div>
                 </div>
-                <div class="ui-g-4 case">
+                <div routerLink="/collaborateurs" class="ui-g-4 case">
                     <div style="position:relative">
                         <div class="shadow-box ui-shadow-1">
-                            <a routerLink="/collaborateurs">
+                            <a >
                                 <img class="image" src="./assets/layout/images/icones/annuaire.png" title=""
                                      data-themekey="#">
                             </a>
@@ -52,10 +52,10 @@
 
 
             <div class="ui-g-12" style="padding-bottom: 0">
-                <div class="ui-g-4 case">
+                <div routerLink="/prestations" class="ui-g-4 case">
                     <div style="position:relative">
                         <div class="shadow-box ui-shadow-1">
-                            <a routerLink="/prestations">
+                            <a >
                                 <img class="image" src="./assets/layout/images/icones/prestation.png" title=""
                                      data-themekey="#">
                             </a>
@@ -64,10 +64,10 @@
                         <div class="description"><div style="padding-top: 5px">Prestations</div></div>
                     </div>
                 </div>
-                <div class="ui-g-4 case">
+                <div routerLink="/collaborateurs" class="ui-g-4 case">
                     <div style="position:relative">
                         <div class="shadow-box ui-shadow-1">
-                            <a routerLink="/collaborateurs">
+                            <a >
                                 <img class="image" src="" title="" data-themekey="#">
                             </a>
                         </div>
@@ -75,10 +75,10 @@
                         <div class="description"><div style="padding-top: 5px"></div></div>
                     </div>
                 </div>
-                <div class="ui-g-4 case">
+                <div routerLink="/collaborateurs" class="ui-g-4 case">
                     <div style="position:relative">
                         <div class="shadow-box ui-shadow-1">
-                            <a routerLink="/collaborateurs">
+                            <a >
                                 <img class="image" src="" title="" data-themekey="#">
                             </a>
                         </div>
@@ -89,10 +89,10 @@
             </div>
 
             <div class="ui-g-12">
-                <div class="ui-g-4 case">
+                <div routerLink="collaborateurs" class="ui-g-4 case">
                     <div style="position:relative">
                         <div class="shadow-box ui-shadow-1">
-                            <a routerLink="collaborateurs">
+                            <a >
                                 <img class="image" src="./assets/layout/images/icones/tableaudebord.png" title=""
                                      data-themekey="#">
                             </a>
@@ -101,10 +101,10 @@
                         <div class="description"><div style="padding-top: 5px">Tableau de bord</div></div>
                     </div>
                 </div>
-                <div class="ui-g-4 case">
+                <div routerLink="collaborateurs" class="ui-g-4 case">
                     <div style="position:relative">
                         <div class="shadow-box ui-shadow-1">
-                            <a routerLink="collaborateurs">
+                            <a >
                                 <img class="image" src="./assets/layout/images/icones/referenciel.png" title=""
                                      data-themekey="#">
                             </a>
@@ -113,10 +113,10 @@
                         <div class="description"><div style="padding-top: 5px">Référentiel</div></div>
                     </div>
                 </div>
-                <div class="ui-g-4 case">
+                <div routerLink="collaborateurs" class="ui-g-4 case">
                     <div style="position:relative">
                         <div class="shadow-box ui-shadow-1">
-                            <a routerLink="collaborateurs">
+                            <a >
                                 <img class="image" src="./assets/layout/images/icones/administration.png" title="" data-themekey="#">
                             </a>
                         </div>
