camelcase data + import csv

--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -161,9 +161,9 @@
                             class="ui-button-success" (click)="saveNewCollaborateur()"></button>
 
 
-                    <input type="file" #fileImportInput name="File Upload" id="txtFileUpload2" (change)="fileChangeListener($event)"
+                    <!--<input type="file" #fileImportInput name="File Upload" id="txtFileUpload2" (change)="fileChangeListener($event)"
                            accept=".csv"/>
-
+-->
 
 
                     <p-fileUpload #fubauto #fileImportInput mode="basic"   accept=".csv" customUpload="true" (uploadHandler)="onUpload($event)"
