--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -29,7 +29,7 @@
             <td *ngFor="let col of columns">
                 {{rowData[col.field]}}
             </td>
-            <td [style]="{'width':' 200px'}">
+            <td class="cta_collabs">
                 <div class="ui-toolbar-group-right">
                     <button pButton type="button" icon="pi pi-search"></button>
                     <button pButton type="button" icon="pi pi-calendar" class="ui-button-success"></button>
