--- a/src/app/component/collaborateurs/collaborateurs.component.html
+++ b/src/app/component/collaborateurs/collaborateurs.component.html
@@ -2,12 +2,11 @@
 <p-toolbar>
     <div class="ui-toolbar-group-right">
         <button pButton type="button" label="New" icon="pi pi-plus" (click)="afficherLaSaisie()"></button>
-
     </div>
 </p-toolbar>
 <br>
 
-<p-table #dt [columns]="cols" [value]="collaborateurs" [paginator]="true" [rows]="10">
+<p-table #dt [columns]="cols" [value]="collaborateurs" [paginator]="true" [rows]="10" [resizableColumns]="true">
     <ng-template pTemplate="caption">
         <div class="ui-toolbar-group-left">COLLABORATEURS</div>
         <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
@@ -17,23 +16,24 @@
 
     <ng-template pTemplate="header" let-columns>
         <tr>
-            <th *ngFor="let col of cols">
+            <th *ngFor="let col of cols" pResizableColumn>
                 {{col.header}}
             </th>
+            <th style="width:120px; border-top:0px; opacity:0%"></th>
         </tr>
-
     </ng-template>
+
     <ng-template pTemplate="body" let-rowData let-columns="columns">
         <tr [pSelectableRow]="rowData">
 
-            <td *ngFor="let col of columns">
-                {{rowData[col.field]}}
+            <td *ngFor="let col of cols" class="tablecol ui-resizable-column" pTooltip="{{col.field}}" tooltipPosition="bottom" > <!-- columns-->
+                {{col.field}} <!-- {{rowData[col.field]}} -->
             </td>
-            <td [style]="{'width':' 200px'}">
+            <td [style]="{'max-width':'200px'}">
                 <div class="ui-toolbar-group-right">
-                    <button pButton type="button" icon="pi pi-search"></button>
-                    <button pButton type="button" icon="pi pi-calendar" class="ui-button-success"></button>
-                    <button pButton type="button" icon="pi pi-times" class="ui-button-danger"></button>
+                    <button pButton type="button" icon="pi pi-search" pTooltip="Voir" tooltipPosition="bottom"></button>
+                    <button pButton type="button" icon="pi pi-calendar" class="ui-button-success" pTooltip="Historique" tooltipPosition="bottom"></button>
+                    <button pButton type="button" icon="pi pi-times" class="ui-button-danger" pTooltip="Supprimer" tooltipPosition="bottom"></button>
                 </div>
             </td>
         </tr>
