--- a/src/app/component/collaborateurs/collaborateurs.component.css
+++ b/src/app/component/collaborateurs/collaborateurs.component.css
@@ -28,6 +28,8 @@ button {margin: 3px}
 
 ::ng-deep .importcsv {
     width: 95% !important;
+    top:auto;
+    bottom: auto;
 }
 
 ::ng-deep  .cta_collabs{
